# nkd.su

./: .eslintrc.yml  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .woodpecker.yaml  ;  API.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  ELIGIBILITY.md  LICENSE  PANIC.md  PANIC.rst  PRIVACY.md  README.md  TOS.md  TWITTER.md  _apps.txt  conftest.py  docker-compose.yml  docker.md  flake.nix  import_library.py  lint-regexes.sh  main.css  manage.py  migrate_votes.py  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  songlibrary.xml  twooter.py  votecounter.py
.github/workflows/: docs.yml  test.yml
docs/: Makefile  conf.py  core-concepts.rst  index.rst  panic.rst  setup.rst
docs/setup/: nix.rst
hooks/: pre-commit
html/: 404.html  500.html  base.html  confirm.html  index.html  mail  message.html  minitracklist.html  playlist.html  request.html  show.html  stats.html  track.html  tracklist.html  trackrow.html  tracks.html  trivia.html  upload.html  user.html  vote.html
html/registration/: login.html
media/: main.css
media/js/: search.js  select.js
nekodesu/: settings.py  urls.py  wsgi.py
nkdsu/: __init__.py  forms.py  middleware.py  mixins.py  monkey.py  settings.py  settings_local.example.py  settings_local_example.py  settings_profile.py  settings_testing.py  tests.py  urls.py  views.py  wsgi.py
nkdsu/static/: admin
nkdsu/templates/: 404.html  (+49 more)
precommit_hooks/: README.md  main.sh  pre-commit
vote/: admin.py  api.py  context_processors.py  forms.py  mail.py  mixins.py  models.py  tasks.py  tests.py  trivia.py  update_library.py  utils.py  views.py
(+218 files in other folders)
