[tool.black]
skip-string-normalization = true
preview = true
color = true

[tool.mypy]
files =  "."
ignore_missing_imports = true
plugins = [
  "mypy_django_plugin.main"
]
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "nkdsu.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "nkdsu.settings_testing"
python_files = "*.py"
addopts = "--doctest-modules --doctest-glob=*.rst --numprocesses=auto --dist=worksteal --pyargs"
timeout = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nkdsu"
version = "0.0.0"
description = "A Neko Desu request robot"
authors = []

[tool.poetry.dependencies]
Levenshtein = "*"
Markdown = "*"
Pillow = "*"
black = "*"
django = ">=4.2.0,<4.3"
django-allauth = "*"
django-extensions = "*"
django-instant-coverage = "*"
django-pipeline = "*"
django-resized = "*"
django-stubs-ext = "*"
musicbrainzngs = "<0.6"
ndg-httpsclient = "*"
psycopg2 = "*"
pyasn1 = "*"
pymemcache = "<5"
python = ">=3.11"
python-dateutil = "*"
requests = "*"
sly = "*"
social-auth-app-django = "*"
social-auth-core = "*"
sphinx = "<6.2"
ujson = "*"
ipython = "^8.21.0"

[tool.poetry.group.test.dependencies]
typeguard = "<3"
types-markdown = "*"
types-python-dateutil = "*"
types-requests = "*"
types-ujson = "*"

[tool.poetry.group.linting.dependencies]
django-stubs = "*"
flake8 = "*"
flake8-import-order = "<2"
mypy = { version = ">=1.5,<1.6", extras = ["mypyc"] }
pytest = "*"
pytest-django = "*"
pytest-timeout = "*"
pytest-xdist = "*"
